hw/hw3/css/style.css
@import url('https://fonts.googleapis.com/css?family=Rajdhani|Megrim');

* {
    margin: 0;
    padding: 0;
}


body {
    background-color: #331940;
    color: #5e366a;
    overflow: hidden;
    font-family: 'Rajdhani', sans-serif;
    transition: 0.3s ease-in-out;
}

.dark {
    background-color: #311d3f;
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto;
}

.grid-item {
    padding: 20px;
    font-size: 30px;
    text-align: center;
}

#form-landing-image {
    background-color: #212121;
    background: linear-gradient(to right, rgba(51, 25, 64, 1),
    rgb(12, 202, 152, 0.4)),
    url("../img/cover.jpg");
    min-height: 100vh; 
    max-height: 100vh;
    min-width: 40vw;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    z-index: -1;
}

#form-heading-intro {
    margin: 5rem 0 0 0;
    font-size: 20px;
    letter-spacing: 10px;
    font-weight: 800;
    opacity: 0.5;
    
}

#form-heading {
    margin-bottom: 1.5rem;
    color: #0cca98;
    font-size: 4rem;
    letter-spacing: 10px;
    font-weight: 800;
    font-family: 'Megrim', cursive;
    background: #a8ff78;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to top, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to top, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}


#form-intro {
    font-size: 18px;
    font-weight: 400;
    max-width: 65%;
    margin: 0 auto 3rem auto;
    letter-spacing: 2px;
    line-height: 1.6;
}

#form-button {
    font-weight: 600;
    border-bottom-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 6px;
    border-top-left-radius: 6px;
    font-size: 16px;
    text-transform: uppercase;
    letter-spacing: 3px;
    padding: 16px 32px;
    cursor: pointer;
    text-decoration: none;
    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
    transition: ease-in-out 0.3s;
    background: #a8ff78;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    color: #212121;
}

#form-button:hover {
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
}

#got-account {
    margin: 0 auto;
    font-size: 14px;
    opacity: 0.9;
    margin-top: 2rem;
    letter-spacing: 2px;
    cursor: pointer;
    display: block;
    text-decoration: none;
    color: #5e366a;
}

.long-shadow {
    text-shadow:1px 1px rgba(0,0,0,0.01),
    2px 2px rgba(0,0,0,0.03),
    3px 3px rgba(0,0,0,0.025),
    4px 4px rgba(0,0,0,0.02),
    5px 5px rgba(0,0,0,0.015),
    6px 6px rgba(0,0,0,0.01),
    7px 6px rgba(0,0,0,0.01),
    8px 8px rgba(0,0,0,0.01),
    9px 8px rgba(0,0,0,0.01),
    10px 10px rgba(0,0,0,0.01),
    11px 11px rgba(0,0,0,0.01),
    12px 12px rgba(0,0,0,0.01),
    13px 13px rgba(0,0,0,0.01),
    14px 14px rgba(0,0,0,0.01),
    15px 15px rgba(0,0,0,0.01),
    16px 16px rgba(0,0,0,0.01),
    17px 17px rgba(0,0,0,0.01),
    18px 18px rgba(0,0,0,0.01),
    19px 19px rgba(0,0,0,0.01),
    20px 20px rgba(0,0,0,0.01),
    21px 21px rgba(0,0,0,0.01),
    22px 22px rgba(0,0,0,0.01),
    23px 23px rgba(0,0,0,0.01);
}

#form {
    display: none;
    max-height: 95vh;
    overflow-y: auto;
}

#form::-webkit-scrollbar { 
    display: none; 
}

#form-heading-stage2 {
    margin: 1rem auto 2rem auto;
    font-size: 2.5rem;
    max-width: 60%;
    min-width: 60%;
    letter-spacing: 10px;
    font-weight: 800;
    color: #88304e;
    text-transform: uppercase;
}

#form p {
    font-size: 1.4rem;
    margin-bottom: 2rem;
    font-weight: 600;
    color: #522546;
}

#cancel {
    display: block;
    text-decoration: none;
    margin: 0 auto;
    padding: 1.75rem 0 1.5rem 0;
    letter-spacing: 2px;
    text-align: center;
    opacity: 0.5;
    font-size: 20px;
    font-weight: 800;
    color: #522546;
    display: none;
}

form input, form select {
    min-width: 450px;
    max-width: 450px;
    margin: 0 auto 1rem auto;
    height: 35px;
    display: none;
    border: none;
    border-bottom: 2px solid #88304e;
    outline: none;
}

#checkbox-cont {
    width: 50%;
    margin: 0 auto 1rem auto;
}

#checkbox {
    margin: 0%;
    width: 20px;
    height: 25px;
    opacity: 0;
    float: left;
    transform: rotate(30deg);
}

#checkbox-cont label {
    font-size: 16px;
    padding-left: 10px;
    opacity: 0;
    float: right;
    font-size: 1.2rem;
    font-weight: 800;
    color: #88304e;
}

#checkbox-cont:after {
    content: "";
    clear: both;
    display: table;
}

#sign-up-button {
    max-width: 50%;
    min-width: 50%;
    margin: 2rem auto 0 auto;
    padding: 15px;
    display: none;
    background-color: #522546;
    color: #e23e57;
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 800;
    letter-spacing: 5px;
    border: none;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
    cursor: pointer;
    transition: 0.3s ease-in-out;
    outline: none;
}

#sign-up-button:hover {
    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
}

input::placeholder {
    color: #88304e;
    opacity: 0.5;
}

input, select {
    color: #88304e;
    background-color: transparent;
    font-weight: 800;
    font-size: 18px;
}

form select {
    height: 40px;
}

#disclaimer {
    font-size: 12px;
    font-weight: 800;
    display: none;
    color: #88304e;
    margin-top: 1rem;
}

.error {
    font-size: 14px !important;
    margin: 0 auto 0 auto !important;
    min-width: 450px;
    max-width: 450px;
    text-align: left;
}

#copyright {
    position: absolute;
    bottom: 0;
    padding: 5px;
    margin-left: 5px;
    opacity: 0.5;
}

@media (max-width: 1000px) {
    .grid-item {
        padding: 50px;
    }
    
    #form-intro {
        max-width: 100%;
    }
    
    #form-heading-intro {
        margin: 2.5rem 0 0 0;
    }
}

@media (max-width: 800px) {
    body {
        overflow-y: auto;
    }
    
    .grid-item:nth-child(1) { 
        order: 2;
    }
    
    .grid-container {
        display: grid;
        grid-template-columns: auto;
    }
    
    #form-landing-image {
        background-color: #212121;
        background: linear-gradient(rgb(12, 202, 152, 0.4),
        rgba(51, 25, 64, 1)),
        url("../img/cover.jpg");
        min-height: 100vh; 
        max-height: 100vh;
        min-width: 40vw;
    
        /* Center and scale the image nicely */
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        z-index: -1;
    }
    
    #intro {
        margin-top: -25vh;
    }
    
    #form-intro {
        max-width: 75%;
    }
    
    .mobile-form {
        margin-top: -50vh;
    }
    
    #form-heading-stage2 {
        max-width: 85%;
    }
    
    #copyright {
        top: 0;
        right: 0;
        margin-right: 10px;
    }
}

@media (max-width: 600px) {
    form input, form select, .error {
        min-width: 80vw;
        max-width: 80vw;
    }
    
    .grid-item {
        padding: 10px;
    }
    
    #got-account {
        display: block;
        text-decoration: none;
        margin: 0 auto;
        padding: 1.75rem 0 1.5rem 0;
        letter-spacing: 2px;
        text-align: center;
        opacity: 0.5;
        font-size: 20px;
        font-weight: 800;
        margin-top: 1rem;
        cursor: pointer;
        display: block;
    }
}

